--- a/volunteer_book_workflow.yaml
+++ b/volunteer_book_workflow.yaml
@@ -5,16 +5,22 @@ workflow:
       action: civis.run_job
       input:
         job_id: 89626669
-      join: all
     va02_event_participant_sheet_import_89317446:
       action: civis.run_job
       input:
         job_id: 89317446
       on-success:
-        - export_va02_participants_mod_89626669
+        - va02_event_participant_mod_89628943
     va02_region_assign_sheet_import_89337612:
       action: civis.run_job
       input:
         job_id: 89337612
       on-success:
+        - va02_event_participant_mod_89628943
+    va02_event_participant_mod_89628943:
+      action: civis.run_job
+      input:
+        job_id: 89628943
+      on-success:
         - export_va02_participants_mod_89626669
+      join: all
