--- a/volunteer_book_workflow.yaml
+++ b/volunteer_book_workflow.yaml
@@ -21,6 +21,12 @@ workflow:
       action: civis.run_job
       input:
         job_id: 89628943
+      join: all
+      on-success:
+        - set_current_status_sql_92268182
+    set_current_status_sql_92268182:
+      action: civis.run_job
+      input:
+        job_id: 92268182
       on-success:
         - export_va02_participants_mod_89626669
-      join: all
