--- a/volunteer_book_workflow.yaml
+++ b/volunteer_book_workflow.yaml
@@ -29,4 +29,10 @@ workflow:
       input:
         job_id: 92268182
       on-success:
+        - decode_url_from_vanid_py_92460577
+    decode_url_from_vanid_py_92460577:
+      action: civis.run_job
+      input:
+        job_id: 92460577
+      on-success:
         - export_va02_participants_mod_89626669
