--- a/volunteer_book_workflow.yaml
+++ b/volunteer_book_workflow.yaml
@@ -10,28 +10,29 @@ workflow:
       input:
         job_id: 89317446
       on-success:
-        - va02_region_assign_sheet_import_89337612
+        - va02_event_p_mod_sql_89628943
     va02_region_assign_sheet_import_89337612:
       action: civis.run_job
       input:
         job_id: 89337612
       on-success:
-        - va02_event_participant_mod_89628943
-    va02_event_participant_mod_89628943:
-      action: civis.run_job
-      input:
-        job_id: 89628943
-      on-success:
-        - set_current_status_sql_92268182
+        - va02_event_p_mod_sql_89628943
     set_current_status_sql_92268182:
       action: civis.run_job
       input:
         job_id: 92268182
       on-success:
         - decode_url_from_vanid_py_92460577
+      join: all
     decode_url_from_vanid_py_92460577:
       action: civis.run_job
       input:
         job_id: 92460577
       on-success:
         - export_va02_participants_mod_89626669
+    va02_event_p_mod_sql_89628943:
+      action: civis.run_job
+      input:
+        job_id: 89628943
+      on-success:
+        - set_current_status_sql_92268182
